works in 1.8.8 and 1.20.1